--- a/app/src/main/res/layout/activity_study.xml
+++ b/app/src/main/res/layout/activity_study.xml
@@ -19,7 +19,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:gif="@drawable/study_1"
-            app:paused="true"/>
+            app:paused="true"
+            app:repeat="false"/>
 
     </RelativeLayout>
 
