congrats & stats page done

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -84,6 +84,14 @@
 
     </LinearLayout>
 
+    <Button
+        android:id="@+id/testFrag"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:text="test congrats"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 
 
 </RelativeLayout>
