--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="divider">#BDBDBD</color>
     <color name="cardColor1">#A1C181</color>
     <color name="toolbar">#17000000</color>
+    <color name="test0">#2D3047</color>
 </resources>
