--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -128,6 +128,14 @@
             android:layout_height="wrap_content"
             android:text="Rate Us"
             android:background="@android:color/white"/>
+        <TextView
+            android:layout_marginTop="16dp"
+            android:textAlignment="center"
+            android:padding="8dp"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:text="About Us"
+            android:background="@android:color/white"/>
 
 
     </LinearLayout>
