--- a/app/src/main/res/layout/card_2.xml
+++ b/app/src/main/res/layout/card_2.xml
@@ -24,21 +24,16 @@
             android:layout_height="wrap_content"
             android:gravity="bottom"
         >
-            <TextView
+            <EditText
                 android:layout_gravity="bottom"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="New Text"
+                android:hint="New Text"
                 android:id="@+id/title"
                 android:textSize="32sp"
                 android:textColor="#7FB685"
                 android:textStyle="bold|italic" />
 
-            <ImageView
-                android:padding="8dp"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:src="@drawable/play_ic"/>
 
 
         </LinearLayout>
