--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -38,7 +38,7 @@
                 android:padding="8dp"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
-                android:src="@drawable/play_ic"/>
+                android:src="@drawable/play_audio"/>
 
 
         </LinearLayout>
