--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -47,7 +47,7 @@
         <ImageView
             android:layout_width="116dp"
             android:layout_height="116dp"
-            android:src="@drawable/play"
+            android:src="@drawable/play_s"
             android:id="@+id/img1"
             android:visibility="invisible" />
         <LinearLayout
@@ -60,21 +60,21 @@
             <ImageView
                 android:layout_width="0dp"
                 android:layout_height="86dp"
-                android:src="@drawable/play"
+                android:src="@drawable/study_s"
                 android:layout_weight="1"
                 android:id="@+id/img2"
                 android:visibility="invisible" />
             <ImageView
                 android:layout_width="0dp"
                 android:layout_height="86dp"
-                android:src="@drawable/play"
+                android:src="@drawable/setting_s"
                 android:layout_weight="1"
                 android:id="@+id/img3"
                 android:visibility="invisible" />
             <ImageView
                 android:layout_width="0dp"
                 android:layout_height="86dp"
-                android:src="@drawable/play"
+                android:src="@drawable/trophy_s"
                 android:layout_weight="1"
                 android:id="@+id/img4"
                 android:visibility="invisible" />
