--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -41,12 +41,13 @@
             android:layout_weight="1">
 
             <ImageView
+                android:padding="16dp"
                 android:id="@+id/playSbtn"
-                android:scaleType="centerInside"
+                android:scaleType="fitCenter"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:src="@android:drawable/ic_media_play"/>
+                android:src="@drawable/media_play"/>
             <TextView
                 android:id="@+id/question_1"
                 android:padding="8dp"
