--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -17,7 +17,7 @@
             android:id="@+id/backBtn"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:src="?attr/actionModeCloseDrawable"
+            android:src="@drawable/back_arrow"
             android:layout_centerVertical="true" />
         <TextView
             android:layout_width="wrap_content"
@@ -39,7 +39,7 @@
         <com.example.rezwan.spellingc.RoundedImage
             android:layout_width="86dp"
             android:layout_height="86dp"
-            android:src="@drawable/pro_pic_4" />
+            android:src="@drawable/pro_pic_4_old" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -56,9 +56,10 @@
                 android:textSize="12sp" />
 
             <TextView
+                android:id="@+id/name_tv"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:background="@android:color/white"
+                android:background="@drawable/circle_bg"
                 android:text="Player"
                 android:padding="8dp"
                 android:textAlignment="center" />
@@ -84,10 +85,10 @@
                 android:layout_width="200dp"
                 android:layout_height="36dp"
                 app:leftButtonColorTintB="@color/colorPrimaryDark"
-                app:leftDrawableB="@drawable/note2old"
+                app:leftDrawableB="@drawable/dec_ic"
                 app:leftDrawableTintB="@color/white"
                 app:rightButtonColorTinitB="@color/colorPrimary"
-                app:rightDrawableB="@drawable/note1old"
+                app:rightDrawableB="@drawable/inc_ic"
                 app:rightDrawableTintB="@color/white"
                 app:textColorB="@color/white"
                 app:textSize="44" />
@@ -112,10 +113,10 @@
                 android:layout_width="200dp"
                 android:layout_height="36dp"
                 app:leftButtonColorTintB="@color/colorPrimaryDark"
-                app:leftDrawableB="@drawable/note2old"
+                app:leftDrawableB="@drawable/dec_ic"
                 app:leftDrawableTintB="@color/white"
                 app:rightButtonColorTinitB="@color/colorPrimary"
-                app:rightDrawableB="@drawable/note1old"
+                app:rightDrawableB="@drawable/inc_ic"
                 app:rightDrawableTintB="@color/white"
                 app:textColorB="@color/white"
                 app:textSize="44" />
@@ -127,15 +128,16 @@
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:text="Rate Us"
-            android:background="@android:color/white"/>
+            android:background="@drawable/circle_bg"/>
         <TextView
+            android:id="@+id/aboutUs"
             android:layout_marginTop="16dp"
             android:textAlignment="center"
             android:padding="8dp"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:text="About Us"
-            android:background="@android:color/white"/>
+            android:background="@drawable/circle_bg"/>
 
 
     </LinearLayout>
