--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,9 +3,12 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-
+    <color name="blue">#3491bf</color>
     <color name="primary">#8BC34A</color>
     <color name="primary_dark">#689F38</color>
+    <color name="green">#689F38</color>
+
+    <color name="red">#ef0800</color>
     <color name="primary_light">#DCEDC8</color>
     <color name="white">#FFFFFF</color>
     <color name="accent">#FF5252</color>
