--- a/incdeclibrary/src/main/res/layout/incdec_imagebutton.xml
+++ b/incdeclibrary/src/main/res/layout/incdec_imagebutton.xml
@@ -20,7 +20,7 @@
         android:layout_gravity="center"
         android:id="@+id/number_counter"
         android:gravity="center"
-        android:background="@android:color/white"
+        android:background="@drawable/circle_bg"
         android:layout_weight=".6"/>
 
     <ImageButton
