--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/accent"
     android:clipChildren="false"
     android:clipToPadding="false"
@@ -60,7 +61,10 @@
                     <com.example.rezwan.spellingc.RoundedImage
                         android:layout_width="86dp"
                         android:layout_height="86dp"
-                        android:src="@drawable/pro_pic_4_old" />
+                        android:src="@drawable/rezwan"
+                        app:border_width="2dp"
+                        app:border_color="@color/white"
+                        />
                 </RelativeLayout>
 
 
@@ -80,7 +84,9 @@
                     <com.example.rezwan.spellingc.RoundedImage
                         android:layout_width="86dp"
                         android:layout_height="86dp"
-                        android:src="@drawable/pro_pic_4_old" />
+                        android:src="@drawable/anik"
+                        app:border_width="2dp"
+                        app:border_color="@color/white"/>
                 </RelativeLayout>
 
             </LinearLayout>
@@ -106,7 +112,9 @@
                     <com.example.rezwan.spellingc.RoundedImage
                         android:layout_width="86dp"
                         android:layout_height="86dp"
-                        android:src="@drawable/pro_pic_4_old" />
+                        android:src="@drawable/sharif"
+                        app:border_width="2dp"
+                        app:border_color="@color/white"/>
                 </RelativeLayout>
 
             </LinearLayout>
@@ -124,7 +132,9 @@
                     <com.example.rezwan.spellingc.RoundedImage
                         android:layout_width="86dp"
                         android:layout_height="86dp"
-                        android:src="@drawable/pro_pic_4_old" />
+                        android:src="@drawable/oitejjo"
+                        app:border_width="2dp"
+                        app:border_color="@color/white"/>
                 </RelativeLayout>
 
             </LinearLayout>
