--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -8,7 +8,7 @@
     android:paddingTop="24dp"
     android:background="@color/accent"
     android:orientation="vertical"
-    tools:context="com.example.rezwan.spellingc.Play">
+    tools:context="com.banglabee.rezwan.spellingc.com.banglabee.Play">
 
 
     <LinearLayout
