--- a/app/src/main/res/layout/activity_study.xml
+++ b/app/src/main/res/layout/activity_study.xml
@@ -31,7 +31,7 @@
         android:layout_weight="0.3"
         android:src="@drawable/ubuntu"/>-->
 
-    <com.example.rezwan.spellingc.stack.SwipeStack
+    <com.banglabee.stack.SwipeStack
         android:id="@+id/swipeStack"
         android:layout_width="match_parent"
         android:layout_height="0dp"
