--- a/app/src/main/res/layout/fragment_congrats.xml
+++ b/app/src/main/res/layout/fragment_congrats.xml
@@ -27,9 +27,12 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
             <RelativeLayout
+                android:id="@+id/snap"
+
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="0dp">
+
 
                 <ImageView
                     android:id="@+id/afterExplode"
@@ -122,13 +125,17 @@
                     android:layout_toEndOf="@+id/makeExplode1" />
 
                 <LinearLayout
+                    android:id="@+id/reveal"
+                    android:alpha="0"
+                    android:visibility="gone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center_horizontal"
                     android:orientation="vertical"
                     android:layout_centerInParent="true">
 
-                    <com.example.rezwan.spellingc.RoundedImage
+                    <com.banglabee.RoundedImage
+                        android:id="@+id/profile_pic"
                         android:layout_width="98dp"
                         android:layout_height="98dp"
                         android:src="@drawable/pro_pic_4_old"
@@ -169,6 +176,17 @@
                         android:textSize="24sp"
                         android:textStyle="normal|bold" />
 
+                    <TextView
+                        android:layout_marginBottom="16dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:text="From BanglaBee App"
+                        android:textColor="@android:color/white"
+                        android:textSize="24sp"
+                        android:textStyle="normal|bold" />
+
+
 
                 </LinearLayout>
 
@@ -198,6 +216,7 @@
                     android:text="OK"/>
 
                 <TextView
+                    android:id="@+id/share"
                     android:padding="16dp"
                     android:layout_weight="1"
                     android:layout_width="0dp"
