--- a/app/src/main/res/layout/card_2.xml
+++ b/app/src/main/res/layout/card_2.xml
@@ -20,6 +20,15 @@
         android:paddingRight="16dp"
         android:paddingTop="16dp">
 
+        <TextView
+            android:visibility="gone"
+            android:id="@+id/rightTV"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:textColor="#7FB685"
+            android:textSize="32sp" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
