--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -37,10 +37,12 @@
         android:layout_centerInParent="true">
 
         <com.banglabee.RoundedImage
-            android:id="@+id/profile_pic"
+            android:id="@+id/profile_pic_s"
             android:layout_width="86dp"
             android:layout_height="86dp"
-            android:src="@drawable/pro_pic_4_old" />
+            android:src="@drawable/pro_pic_4_old"
+            app:border_width="1dp"
+            app:border_color="@color/white"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
