--- a/app/src/main/res/layout/activity_stats.xml
+++ b/app/src/main/res/layout/activity_stats.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/accent"
     android:clipChildren="false"
     android:clipToPadding="false"
@@ -40,9 +41,12 @@
         android:layout_alignParentStart="true">
 
         <com.banglabee.RoundedImage
+            android:id="@+id/pro_pic_stats"
             android:layout_width="86dp"
             android:layout_height="86dp"
-            android:src="@drawable/pro_pic_4_old" />
+            android:src="@drawable/pro_pic_4_old"
+            app:border_width="1dp"
+            app:border_color="@color/white"/>
 
 
         <TextView
