--- a/app/src/main/res/layout/activity_study.xml
+++ b/app/src/main/res/layout/activity_study.xml
@@ -9,40 +9,6 @@
     android:paddingTop="24dp"
     android:background="@color/accent">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:gravity="center_vertical|end"
-        android:padding="8dp">
-        <LinearLayout
-            android:id="@+id/searchLL"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:background="@drawable/search_bg"
-            android:animateLayoutChanges="true">
-            <EditText
-                android:layout_marginLeft="8dp"
-                android:id="@+id/searchET"
-                android:visibility="gone"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@android:color/transparent"
-                android:drawableLeft="@android:drawable/ic_menu_search"/>
-            <ImageView
-                android:id="@+id/searchBtn"
-                android:padding="4dp"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@android:drawable/ic_menu_search"/>
-
-        </LinearLayout>
-
-
-
-
-    </RelativeLayout>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -93,4 +59,56 @@
 
 
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:animateLayoutChanges="true">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            android:gravity="center_vertical|end"
+            android:padding="8dp">
+            <LinearLayout
+                android:id="@+id/searchLL"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:background="@drawable/search_bg"
+                android:animateLayoutChanges="true">
+                <EditText
+                    android:layout_marginLeft="8dp"
+                    android:id="@+id/searchET"
+                    android:visibility="gone"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@android:color/transparent"
+                    android:drawableLeft="@android:drawable/ic_menu_search"/>
+                <ImageView
+                    android:id="@+id/searchBtn"
+                    android:padding="4dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:src="@android:drawable/ic_menu_search"/>
+
+            </LinearLayout>
+
+
+
+
+        </RelativeLayout>
+
+        <android.support.v7.widget.RecyclerView
+            android:visibility="gone"
+            android:id="@+id/searchRV"
+            android:background="@color/search_rv_bg"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+
+    </LinearLayout>
+
+
+
 </RelativeLayout>
