--- a/app/src/main/res/layout/activity_study.xml
+++ b/app/src/main/res/layout/activity_study.xml
@@ -79,6 +79,7 @@
                 <EditText
                     android:layout_marginLeft="8dp"
                     android:id="@+id/searchET"
+                    android:textColor="@color/white"
                     android:visibility="gone"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
