--- a/app/src/main/res/drawable/play_bg.xml
+++ b/app/src/main/res/drawable/play_bg.xml
@@ -6,6 +6,9 @@
 
     <solid
         android:color="#ff2020"/>
+    <stroke
+        android:width="2dp"
+        android:color="@color/white"/>
 
 
 </shape>
